# Fastrack

./: .gitattributes  .gitignore  LICENSE  README.md  show-bytes.c
Coding/sicp/: Ch2 Exercise Solutions.md
Doing/: sharing session.md
Doing/One Word Diary/: January.md  November.md
Doing/Reading/: 12. 少年维特的烦恼[歌德著, 侯浚吉译].epub  12. 少年维特的烦恼[歌德著, 韩耀成译].epub
Doing/ai/: 20250815分享内容.docx  20250912分享内容.docx  阿里巴巴云襄老师-机器学习算法详解.docx
Doing/ai/CrewAITest/testproject/: README.md  pyproject-old.toml  pyproject.toml
Doing/ai/CrewAITest/testproject/src/testproject/: crew.py  main.py
Investment/: 五粮液.py  基金及其对应的场内基金.xlsx  股票分析.xlsx
Reading/: 12. December - Charlie Chaplin - All I began to love myself.docx  12. December - Denny - 如何活着：欲望、外界、标签、天才、时间、人生目标和经历.docx  12. December - Martin E.P Seligman - 真实的幸福.epub  12. December - Robert de Board - Counselling for Toads A Psychological Adventure.epub  12. December - Steve Pavlina - How to Discover Your Life Purpose in About 20 Minutes.docx  4. April - Jack London - 野性的呼唤.epub  5. May - 村上春树 - 海边的卡夫卡.mobi  5. May - 王小波 - 我的精神家园.epub  7. July - [加]阿瑟·黑利 - 钱商.epub  7. July - [意]马基雅维利 - 君主论.epub  7. July - [美]吉姆·柯林斯 - 从优秀到卓越.epub  8. August - BJ Fogg - Tiny Habits.xmind  9. September - 反乌托邦小说三部曲.epub
Sideline/: ~$家教带课记录.xlsx  家教带课记录.xlsx
Targets/: 2022下半年.xmind  2023.xmind  2024.xmind  change log.md
happiness/: sharing session.md
reading/: 7. 货币崛起[Niall Ferguson 著, 高诚 译].epub  文明的冲突与世界秩序的重建亨廷顿 (Samuel Huntington) 著   周琪, 刘绯, 张立平 译].epub  枢纽：3000年的中国[施展].epub
tutor/: 中小学教材电子版链接.xlsx  家教带课记录.xlsx  考前准备.docx
(+720 files in other folders)
