[project]
name = "testproject"
version = "0.1.0"
description = "testProject using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.55.2,<1.0.0",
]

[project.scripts]
testproject = "testproject.main:run"
run_crew = "testproject.main:run"
train = "testproject.main:train"
replay = "testproject.main:replay"
test = "testproject.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
